[gd_scene format=3 uid="uid://bu143vv81fge1"]

[ext_resource type="Script" uid="uid://lj83by4x5lf3" path="res://Interactible/dirt_tree/plantable_dirt_tree.gd" id="1_xaijn"]
[ext_resource type="Script" uid="uid://dok1vnme5vfqq" path="res://Interactible/dirt_tree/dirt_tree_interaction.gd" id="2_1heg3"]
[ext_resource type="PackedScene" uid="uid://ckfs7mv2u2ugw" path="res://Assets/models/zollabagnata.glb" id="3_gsh0p"]
[ext_resource type="PackedScene" uid="uid://c24ch2lxlmbto" path="res://Assets/models/zollasecca.glb" id="4_jehm5"]
[ext_resource type="Script" uid="uid://k4c1m5xgiomp" path="res://Interactible/interactible.gd" id="5_jehm5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_n6lg7"]
radius = 0.74985105

[sub_resource type="SphereShape3D" id="SphereShape3D_c506m"]
radius = 0.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hdsr7"]
height = 0.18902588
radius = 0.80810547

[node name="Plantable_dirt_tree" type="Node3D" unique_id=780328294]
script = ExtResource("1_xaijn")

[node name="StaticBody3D" type="StaticBody3D" parent="." unique_id=1670731565]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 2, 0, -0.27569383, 0)
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" unique_id=2064661523]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.23039609, 0)
shape = SubResource("SphereShape3D_n6lg7")

[node name="plant_plant" type="Area3D" parent="." unique_id=37690805]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.28424, 0)
collision_layer = 256
script = ExtResource("2_1heg3")
int_name = "plant the seed"

[node name="CollisionShape3D" type="CollisionShape3D" parent="plant_plant" unique_id=1235062991]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.08436298, 0)
shape = SubResource("SphereShape3D_c506m")

[node name="plant_space" type="Node3D" parent="." unique_id=1325503360]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.19187275, 0)

[node name="zollabagnata" parent="." unique_id=601839397 instance=ExtResource("3_gsh0p")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0.09874594, 0)

[node name="zollasecca" parent="." unique_id=1140806375 instance=ExtResource("4_jehm5")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0.09874594, 0)
visible = false

[node name="put_water" type="Area3D" parent="." unique_id=440240561]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0.09874594, 0)
collision_layer = 256
script = ExtResource("5_jehm5")
int_name = "put water"

[node name="CollisionShape3D" type="CollisionShape3D" parent="put_water" unique_id=1737125843]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.043627918, 0)
shape = SubResource("CylinderShape3D_hdsr7")

[connection signal="interact" from="plant_plant" to="." method="_on_plant_plant_interact"]
[connection signal="interact" from="put_water" to="." method="_on_put_water_interact"]
